demo/patch1.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    foo: bar
    color: orange
  name: pod-matches-for-clusterpolicy
  namespace: notinpolicyns
spec:
  containers:
  - image: nginx:latest
    name: nginx
