demo/patch2.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    foo: bar
    color: orange
  name: pod-matches-for-both-policy
  namespace: sameaspolicyns
spec:
  containers:
  - image: nginx:latest
    name: nginx
  dnsConfig:
    options:
    - name: ndots
      value: "1"
