demo/patch3.yaml
apiVersion: v1
kind: Pod
metadata:
  name: myapp-pod
  labels:
    foo: bar
    color: orange
  namespace: sameaspolicyns
spec:
  containers:
  - name: nginx
    image: nginx:latest
