demo/patch5.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-pod
  labels:
    app: nginx
  namespace: sameaspolicyns
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
        color: orange
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2
        ports:
        - containerPort: 80
