demo/patches3.yaml
apiVersion: v1
kind: Pod
metadata:
  name: myapp-pod
  labels:
    foo: bar
  namespace: sameaspolicyns
spec:
  containers:
  - name: nginx
    image: nginx:latest
  dnsConfig:
    options:
    - name: ndots
      value: "1"
