demo/patches4.yaml
apiVersion: v1
kind: Pod
metadata:
  name: myapp-pod
  labels:
    foo: bar
  namespace: notinpolicyns
spec:
  containers:
  - name: nginx
    image: nginx:latest
